# bevy_jam_side_effects

./: .gitignore  Cargo.toml  build.sh  cover_art.aseprite  index.html  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: default.config.ron  scratch.aseprite
assets/image/tileset/: outside_tiles.aseprite  tower_tiles.aseprite
assets/image/ui/: alarm.aseprite
assets/image/vfx/: alert_popup.aseprite
assets/map/: game_map.ldtk
assets/maps/: game_map.ldtk  test_map.ldtk
assets/sprites/character/: Gnoll.aseprite
assets/sprites/interactive/: interactive.aseprite
assets/sprites/tilesets/: interactive.aseprite  outside_tiles.aseprite  tower_tiles.aseprite
assets/sprites/ui/: alarm.aseprite
assets/sprites/vfx/: DropShadow.aseprite  drop_shadow.aseprite
src/: animation.rs  asset.rs  camera.rs  combat.rs  common.rs  cutscene.rs  debug.rs  game.rs  hud.rs  lib.rs  main.rs  map.rs  math.rs  mob.rs  music.rs  sequence.rs  util.rs  vfx.rs
src/common/: asset.rs  camera.rs  debug.rs  level.rs  music.rs  physics.rs  window.rs
src/game/: actor.rs  alarm.rs  combat.rs  cutscene.rs  level.rs  map.rs  mob.rs
src/game/actor/: animation.rs  body.rs  enemy.rs  health.rs  intent.rs  player.rs
src/game/level/: exit.rs  gate.rs  plate.rs  victory.rs  wall.rs
src/game/mob/: animation.rs  enemy.rs  player.rs
src/mob/: enemy.rs  mod.rs  player.rs
src/player/: mod.rs
src/sequence/: boot.rs  game.rs
src/util/: animation.rs  ui.rs  vfx.rs  y_sort.rs
src/util/animation/: facing.rs  follow.rs  lifetime.rs  offset.rs
src/util/ui/: alarm_meter.rs  backdrop.rs  font.rs  font_size_hack.rs  health_bar.rs  nametag.rs
web/: index.html
