[package]
name = "bevy_jam_side_effects"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.10"
bevy_ecs_ldtk = { version = "0.6", features = ["atlas"] }
bevy_editor_pls = { version = "0.4", optional = true }
bevy_rapier2d = "0.21"
leafwing-input-manager = "0.9"
rand = { version = "0.8", features = [ "small_rng" ] }
wasm-bindgen = { version = "0.2", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = [
	"bevy/wav",
]
debug_mode = [
    "bevy/dynamic_linking",
    "bevy/filesystem_watcher",
    "bevy_rapier2d/debug-render-2d",
]
editor = [
    "debug_mode",
    "dep:bevy_editor_pls",
]
wasm = [
    "bevy_rapier2d/wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wee_alloc",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "thin"
# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
